# eii-configmgr

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
cmake/: InstallEIIConfigMgr.cmake  LinkGRPC.cmake
cpp/: config_mgr.cpp
examples/: env.sh
grpc-package/: grpc_deb.sh  grpc_zip.sh
python/: setup_packaging.py
python/examples/: echo_client.py  echo_service.py  publisher.py  subscriber.py
src/: cfgmgr.c
